Fix methods to build